[B]Retrospect v5.1.9 - Changelog - 2020-03-07[/B]

This release focus on some generic GUI stuff, that makes things appear a bit nicer:

 * You can now enable the setting "Show thumbnail as fanart if no fanart is available" to fallback to the thumbnail as fanart instead of the channel's fanart.
 * We introduced a standard way of showing the "expire" date of an item
 * And we clarified some things in the GUI, such as when another add-on is used to display content or when an items is geographically restricted.

Besides this we fixed the following channels: L1, TV4Play.se and Stievie.be.

[B]Framework related[/B]
-

[B]GUI/Settings/Language related[/B]
-

[B]Channel related[/B]
* Fixed: TV4 episodic items would breakt without "del" in title